# Project-BlackIceOS

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  DEVELOPMENT_WORKFLOW.md  Plan.md  README.md  docker-compose.yml  prometheus.yml
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ai0s-ci.yml  auth-server-ci.yml  kali-ai-os-ci.yml  pr-checks.yml
Ai0S/: .env.example  README.md  RUN_GUIDE.md  debug_agent_state.py  debug_langgraph.py  main.py  pyproject.toml  pyproject_simple.toml  requirements.txt  run_app.py  setup_windows.bat  test_llm_performance.py
Ai0S/src/: launcher.py
Ai0S/src/Ai0S/: __init__.py  launcher.py
Ai0S/src/Ai0S/agents/orchestrator/: intelligent_orchestrator.py  langgraph_orchestrator.py  multi_agent_state.py  recursive_workflow.py
Ai0S/src/Ai0S/agents/specialized/: __init__.py  commander_agent.py  decision_agent.py  verification_agent.py
Ai0S/src/Ai0S/backend/: main.py
Ai0S/src/Ai0S/backend/core/: error_recovery.py  mcp_executor.py  visual_monitor.py
Ai0S/src/Ai0S/backend/ipc/: ipc_server.py
Ai0S/src/Ai0S/backend/models/: ai_models.py
Ai0S/src/Ai0S/backend/security/: security_framework.py
Ai0S/src/Ai0S/config/: settings.py
Ai0S/src/Ai0S/desktop_app/: main_window.py
Ai0S/src/Ai0S/desktop_app/components/: chat_interface.py  execution_visualizer.py  screenshot_preview.py  sidebar.py  status_panel.py  voice_input.py
Ai0S/src/Ai0S/desktop_app/ipc/: ipc_client.py
Ai0S/src/Ai0S/desktop_app/themes/: professional_theme.py
Ai0S/src/Ai0S/mcp_server/: server.py
Ai0S/src/Ai0S/mcp_server/tools/: browser_tools.py  file_tools.py  interactive_terminal.py  system_tools.py  ui_interaction_tools.py  web_element_detector.py
Ai0S/src/Ai0S/models/: ai_models.py
Ai0S/src/Ai0S/utils/: platform_detector.py
Ai0S/src/agents/orchestrator/: langgraph_orchestrator.py
Ai0S/src/backend/: main.py
Ai0S/src/backend/core/: execution_controller.py  mcp_executor.py  task_planner.py  visual_monitor.py
Ai0S/src/backend/ipc/: ipc_server.py
Ai0S/src/backend/models/: ai_models.py
Ai0S/src/config/: settings.py
Ai0S/src/desktop_app/: main_window.py
Ai0S/src/desktop_app/components/: chat_interface.py  execution_visualizer.py  screenshot_preview.py  sidebar.py  status_panel.py  voice_input.py
Ai0S/src/desktop_app/ipc/: ipc_client.py
Ai0S/src/mcp_server/tools/: application_tools.py  browser_tools.py  system_tools.py  ui_interaction_tools.py
auth-server/: Dockerfile  README.md  pyproject.toml  test.db
auth-server/app/: main.py
auth-server/app/auth/: dependencies.py  models.py  routes.py
auth-server/app/core/: config.py  security.py
auth-server/app/database/: connection.py  models.py
auth-server/app/utils/: encryption.py
auth-server/migrations/: 001_initial_schema.sql
auth-server/tests/: conftest.py  test_auth.py  test_database.py  test_encryption.py
configs/: .pre-commit-config.yaml  geminiconfig.json
docs/: DEVELOPMENT_WORKFLOW.md  desktop_automation.md  kali_linux_setup.md  setup_guide.md  system_architecture.md  voice_transcription.md
kali-ai-os/: main.py  pyproject.toml
kali-ai-os/scripts/: cleanup_display.sh  debug_vnc.py  setup_desktop_system.sh  test_desktop_system.py
kali-ai-os/src/ai/core/: llm_gateway.py
kali-ai-os/src/ai/processing/: intent_recognizer.py
kali-ai-os/src/ai/security/: key_manager.py
kali-ai-os/src/auth/: auth_client.py
kali-ai-os/src/desktop/applications/: security_app_controller.py
kali-ai-os/src/desktop/automation/: desktop_controller.py
kali-ai-os/src/desktop/display/: __init__.py  display_controller.py  virtual_display.py  vnc_server.py
kali-ai-os/src/desktop/gui/: __init__.py
kali-ai-os/src/desktop/monitoring/: user_activity.py
kali-ai-os/src/desktop/recognition/: opencv_matcher.py  template_manager.py
kali-ai-os/src/desktop/safety/: emergency_stop.py  isolation_manager.py  permission_guard.py
kali-ai-os/src/desktop/viewer/: __init__.py  base_viewer.py  viewer_manager.py  vnc_viewer.py  vnc_viewer_simple.py
kali-ai-os/src/integration/: voice_desktop_bridge.py
kali-ai-os/src/voice/config/: audio_config.py
kali-ai-os/src/voice/recognition/: audio_processor.py
kali-ai-os/templates/: README.md
kali-ai-os/tests/: test_main_components.py
kali-ai-os/tests/ai/: test_llm_gateway.py
kali-ai-os/tests/auth/: test_auth_client.py
kali-ai-os/tests/desktop/: test_desktop_controller.py  test_permission_guard.py  test_template_manager.py  test_user_activity_simple.py
kali-ai-os/tests/integration/: test_basic_integration.py
kali-ai-os/tests/voice/: test_recognition.py
mcp-automation/: .env.example  .gitignore  INSTALLATION.md  README.md  SETUP_LLM_OCR.md  pyproject.toml  start_server.py  test.py
mcp-automation/configs/: fastmcp.json
mcp-automation/examples/: automation_example.py  basic_usage.py  gemini_integration.py
mcp-automation/src/mcp_automation/: server.py
mcp-automation/src/mcp_automation/automation/: controller.py
mcp-automation/src/mcp_automation/intelligence/: cv_analyzer.py  llm_ocr_engine.py  screen_analyzer.py  screenshot.py
mcp-automation/src/mcp_automation/safety/: permission_manager.py
mcp-automation/src/mcp_automation/utils/: config.py
tasks/: Plan.md  agentic-os-control-plan(1).md  agentic-os-control-plan(2).md  agentic-os-control-plan.md  plan.md  task10_system_integration.md  task1_auth_server.md  task2_voice_engine.md  task3_desktop_automation.md  task4_ai_processing.md  task5_security_tools.md  task6_memory_system.md  task7_teaching_mode.md  task8_safety_framework.md  task9_multimodal_interface.md  vm_setup_guide.md
