[project]
name = "kali-ai-os-auth-server"
version = "1.0.0"
description = "Secure authentication and API key management for Kali AI-OS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "redis",
    "cryptography",
    "pyjwt",
    "bcrypt",
    "python-multipart",
    "pydantic[email]",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]
dev = [
    "ruff",
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.black]
target-version = ['py311']
line-length = 88

[dependency-groups]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
