[project]
name = "kali-ai-os-voice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai",
    "python-dotenv",
    "pvporcupine",
    "pyaudio",
    "sounddevice",
    "scipy",
    "numpy",
    "pyttsx3",
    "webrtcvad",
    "setuptools<66",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pre-commit",
    "ruff",
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
